--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: sans-serif;
+  background-color: #000;
+  background-image: url(http://1bp.blogspot.com/-b-Xw4dz-OlU/UczX-KXdx-I/AAAAAAAAAho/hgreR-LnwuM/s320/matrix-animated-image.gif);
 }
 
 a {
@@ -18,4 +20,23 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+h1 {
+  text-align: center;
+}
+
+div.row {
+  padding: 10px;
+  margin: 5px 5px 5px;
+}
+h3 {
+  font-size: 1.72rem;
+  line-height: 120%;
+  margin: 1.9466666667rem 0 1.168rem 0;
+  color: green;
+}
+
+div.container {
+  background: whitesmoke;
 }
